--- a/scripts/sgd_sandbox.ipynb
+++ b/scripts/sgd_sandbox.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/matentzn/.pyenv/versions/3.11.7/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from oaklib import get_adapter\n",
@@ -14,22 +23,26 @@
     "\n",
     "# Path to the file\n",
     "sgd_raw_data_path = '../data/PHENOTYPE_SGD.json'\n",
-    "sgd_dosdp_path = '../data/abnormalQualityOfThing.tsv'\n",
+    "sgd_dosdp_path = '../data/sgd_dosdp.tsv'\n",
+    "sgd_pato_mapping_path = '../data/sgd_pato.sssom.tsv'\n",
     "\n",
+    "\n",
+    "df_sgd_dosdp = pd.read_csv(sgd_dosdp_path, sep='\\t')\n",
+    "df_sgd_pato_mapping = pd.read_csv(sgd_pato_mapping_path, sep='\\t')\n",
     "\n",
     "# Read and parse the JSON file\n",
     "try:\n",
-    "    with open(file_path, 'r') as file:\n",
+    "    with open(sgd_raw_data_path, 'r') as file:\n",
     "        json_data = json.load(file)\n",
     "except FileNotFoundError:\n",
-    "    print(f\"File not found: {file_path}\")\n",
+    "    print(f\"File not found: {sgd_raw_data_path}\")\n",
     "except json.JSONDecodeError:\n",
     "    print(\"Error decoding JSON from the file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +68,8 @@
        "      <th></th>\n",
        "      <th>pato_id</th>\n",
        "      <th>pato_id_name</th>\n",
+       "      <th>original_id</th>\n",
+       "      <th>original_label</th>\n",
        "      <th>affected_entity_1_super</th>\n",
        "      <th>affected_entity_1_super_name</th>\n",
        "    </tr>\n",
@@ -62,6 +77,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>PATO:0002301</td>\n",
+       "      <td>decreased quality</td>\n",
        "      <td>APO:0000003</td>\n",
        "      <td>decreased</td>\n",
        "      <td>APO:0000087</td>\n",
@@ -69,6 +86,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>PATO:0002301</td>\n",
+       "      <td>decreased quality</td>\n",
        "      <td>APO:0000003</td>\n",
        "      <td>decreased</td>\n",
        "      <td>APO:0000087</td>\n",
@@ -76,6 +95,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>PATO:0002301</td>\n",
+       "      <td>decreased quality</td>\n",
        "      <td>APO:0000003</td>\n",
        "      <td>decreased</td>\n",
        "      <td>APO:0000110</td>\n",
@@ -83,6 +104,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>PATO:0002301</td>\n",
+       "      <td>decreased quality</td>\n",
        "      <td>APO:0000003</td>\n",
        "      <td>decreased</td>\n",
        "      <td>APO:0000110</td>\n",
@@ -90,6 +113,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>PATO:0002301</td>\n",
+       "      <td>decreased quality</td>\n",
        "      <td>APO:0000003</td>\n",
        "      <td>decreased</td>\n",
        "      <td>APO:0000095</td>\n",
@@ -100,29 +125,32 @@
        "</div>"
       ],
       "text/plain": [
-       "       pato_id pato_id_name affected_entity_1_super  \\\n",
-       "0  APO:0000003    decreased             APO:0000087   \n",
-       "1  APO:0000003    decreased             APO:0000087   \n",
-       "2  APO:0000003    decreased             APO:0000110   \n",
-       "3  APO:0000003    decreased             APO:0000110   \n",
-       "4  APO:0000003    decreased             APO:0000095   \n",
+       "        pato_id       pato_id_name  original_id original_label  \\\n",
+       "0  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
+       "1  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
+       "2  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
+       "3  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
+       "4  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
        "\n",
-       "     affected_entity_1_super_name  \n",
-       "0         resistance to chemicals  \n",
-       "1         resistance to chemicals  \n",
-       "2             competitive fitness  \n",
-       "3             competitive fitness  \n",
-       "4  chemical compound accumulation  "
+       "  affected_entity_1_super    affected_entity_1_super_name  \n",
+       "0             APO:0000087         resistance to chemicals  \n",
+       "1             APO:0000087         resistance to chemicals  \n",
+       "2             APO:0000110             competitive fitness  \n",
+       "3             APO:0000110             competitive fitness  \n",
+       "4             APO:0000095  chemical compound accumulation  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     " # Extract phenotypeTermIdentifiers\n",
-    "\n",
+    "def get_mapped_pato_id(phenotype_term_id_order1, df_sgd_pato_mapping):\n",
+    "    pato_id = df_sgd_pato_mapping[df_sgd_pato_mapping['subject_id'] == phenotype_term_id_order1]['object_id'].iloc[0]\n",
+    "    pato_label = df_sgd_pato_mapping[df_sgd_pato_mapping['subject_id'] == phenotype_term_id_order1]['object_label'].iloc[0]\n",
+    "    return pato_id, pato_label\n",
     "\n",
     "data = []\n",
     "\n",
@@ -147,24 +175,65 @@
     "               raise ValueError(f\"Phenotype description has unexpected term item: {pheno_id['termOrder']} ({pheno_id})\")\n",
     "            phenotype_term_id_order2 = pheno_id['termId']\n",
     "            if not phenotype_term_id_order2:\n",
-    "               print(\"EEEE\")\n",
     "               raise ValueError(f\"Phenotype description has unexpected term order 2 item: {pheno_id}\")\n",
     "            phenotype_term_id_order2_label = adapter.label(phenotype_term_id_order2)\n",
     "         else:\n",
     "               raise ValueError(f\"Phenotype description has unexpected order: {pheno_id['termOrder']} ({pheno_id})\")\n",
     "   \n",
-    "   data.append([phenotype_term_id_order1, phenotype_term_id_order1_label, phenotype_term_id_order2, phenotype_term_id_order2_label])\n",
+    "   pato_id, pato_label = get_mapped_pato_id(phenotype_term_id_order1, df_sgd_pato_mapping)\n",
+    "   data.append([pato_id, pato_label, phenotype_term_id_order1, phenotype_term_id_order1_label, phenotype_term_id_order2, phenotype_term_id_order2_label])\n",
     "\n",
-    "df = pd.DataFrame.from_records(data, columns=[\"pato_id\", \"pato_id_name\", \"affected_entity_1_super\", \"affected_entity_1_super_name\"])\n",
+    "df = pd.DataFrame.from_records(data, columns=[\"pato_id\", \"pato_id_name\", \"original_id\", \"original_label\", \"affected_entity_1_super\", \"affected_entity_1_super_name\"])\n",
     "\n",
-    "df.head()\n"
+    "df.head()\n",
+    "\n",
+    "# NEXT TIME WORK ON ADDING THE GENERATED IDS TO DOSDP (TAKE CODE FROM KEVIN, RFACTOR)\n",
+    "# NEXT TIME BUILD DOSDP GENERATE PIPELINE TO CREATE THE OWL - ensure tha\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    PATO:0002301\n",
+       "Name: object_id, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "phenotype_term_id_order1=\"APO:0000003\"\n",
+    "\n",
+    "pato_id = get_mapped_pato_id(phenotype_term_id_order1, df_sgd_pato_mapping)\n",
+    "pato_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_dedup \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mdrop_duplicates()\n\u001b[1;32m      2\u001b[0m df_dedup\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/sgd_dosdp.tsv\u001b[39m\u001b[38;5;124m\"\u001b[39m,sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m df_pato \u001b[38;5;241m=\u001b[39m df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpato_id\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpato_id_name\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mdrop_duplicates()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_dedup = df.drop_duplicates()\n",
     "df_dedup.to_csv(\"../data/sgd_dosdp.tsv\",sep=\"\\t\", index=None)\n",
