--- a/scripts/sgd_sandbox.ipynb
+++ b/scripts/sgd_sandbox.ipynb
@@ -187,6 +187,8 @@
     "\n",
     "df.head()\n",
     "\n",
+    "df.to_csv('sgd_phenotype.csv', index=False)\n",
+    "\n",
     "# NEXT TIME WORK ON ADDING THE GENERATED IDS TO DOSDP (TAKE CODE FROM KEVIN, RFACTOR)\n",
     "# NEXT TIME BUILD DOSDP GENERATE PIPELINE TO CREATE THE OWL - ensure tha\n"
    ]
