Starting sgd script

--- a/scripts/sgd_sandbox.ipynb
+++ b/scripts/sgd_sandbox.ipynb
@@ -3,14 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-13T18:48:30.975025Z",
+     "start_time": "2024-03-13T18:48:19.848278Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/matentzn/.pyenv/versions/3.11.7/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/Users/kschaper/Documents/Monarch/uphenotizer/venv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Downloading apo.db.gz: 0.00B [00:00, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9e149272683946f1a0d59ecde84cf488"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found: ../data/PHENOTYPE_SGD.json\n"
      ]
     }
    ],
@@ -43,106 +67,23 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-13T18:48:31.358571Z",
+     "start_time": "2024-03-13T18:48:30.976519Z"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pato_id</th>\n",
-       "      <th>pato_id_name</th>\n",
-       "      <th>original_id</th>\n",
-       "      <th>original_label</th>\n",
-       "      <th>affected_entity_1_super</th>\n",
-       "      <th>affected_entity_1_super_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PATO:0002301</td>\n",
-       "      <td>decreased quality</td>\n",
-       "      <td>APO:0000003</td>\n",
-       "      <td>decreased</td>\n",
-       "      <td>APO:0000087</td>\n",
-       "      <td>resistance to chemicals</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PATO:0002301</td>\n",
-       "      <td>decreased quality</td>\n",
-       "      <td>APO:0000003</td>\n",
-       "      <td>decreased</td>\n",
-       "      <td>APO:0000087</td>\n",
-       "      <td>resistance to chemicals</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PATO:0002301</td>\n",
-       "      <td>decreased quality</td>\n",
-       "      <td>APO:0000003</td>\n",
-       "      <td>decreased</td>\n",
-       "      <td>APO:0000110</td>\n",
-       "      <td>competitive fitness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PATO:0002301</td>\n",
-       "      <td>decreased quality</td>\n",
-       "      <td>APO:0000003</td>\n",
-       "      <td>decreased</td>\n",
-       "      <td>APO:0000110</td>\n",
-       "      <td>competitive fitness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PATO:0002301</td>\n",
-       "      <td>decreased quality</td>\n",
-       "      <td>APO:0000003</td>\n",
-       "      <td>decreased</td>\n",
-       "      <td>APO:0000095</td>\n",
-       "      <td>chemical compound accumulation</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        pato_id       pato_id_name  original_id original_label  \\\n",
-       "0  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
-       "1  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
-       "2  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
-       "3  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
-       "4  PATO:0002301  decreased quality  APO:0000003      decreased   \n",
-       "\n",
-       "  affected_entity_1_super    affected_entity_1_super_name  \n",
-       "0             APO:0000087         resistance to chemicals  \n",
-       "1             APO:0000087         resistance to chemicals  \n",
-       "2             APO:0000110             competitive fitness  \n",
-       "3             APO:0000110             competitive fitness  \n",
-       "4             APO:0000095  chemical compound accumulation  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'json_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 9\u001B[0m\n\u001B[1;32m      5\u001B[0m    \u001B[38;5;28;01mreturn\u001B[39;00m pato_id, pato_label\n\u001B[1;32m      7\u001B[0m data \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m----> 9\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m item \u001B[38;5;129;01min\u001B[39;00m \u001B[43mjson_data\u001B[49m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m\"\u001B[39m]:\n\u001B[1;32m     10\u001B[0m   phenotype_term_id_order1 \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m     11\u001B[0m   phenotype_term_id_order2 \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'json_data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -195,21 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    PATO:0002301\n",
-       "Name: object_id, dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-13T18:48:31.366226Z",
+     "start_time": "2024-03-13T18:48:31.366085Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -221,21 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_dedup \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mdrop_duplicates()\n\u001b[1;32m      2\u001b[0m df_dedup\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/sgd_dosdp.tsv\u001b[39m\u001b[38;5;124m\"\u001b[39m,sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m df_pato \u001b[38;5;241m=\u001b[39m df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpato_id\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpato_id_name\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mdrop_duplicates()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_dedup = df.drop_duplicates()\n",
     "df_dedup.to_csv(\"../data/sgd_dosdp.tsv\",sep=\"\\t\", index=None)\n",
